# hackathon

./: README  main.py  pyproject.toml
adapters/db/: HelpDesk.py
adapters/db/common/: base.py
bash/: deploy_dev.sh
devops/: localhost.yml
services/: service.py
