[tool.poetry]
name = "hackatlon"
version = "0.1.0"
description = ""
authors = ["Edgar Molina <edgar.molina@finkargo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.111.0"
sqlmodel = "^0.0.20"
psycopg2 = "^2.9.9"
streamlit = "^1.36.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
